@@ -1,0 +1,10 @@
+[[!comment format=mdwn
+ username="joey"
+ subject="""comment 1"""
+ date="2016-01-29T17:16:57Z"
+ content="""
+Argh, that was a dumb mistake. I've fixed this in git.
+
+A better workaround would be to use --quiet which will silence all messages
+except the main command output.
+"""]]
