@@ -2,6 +2,8 @@ git-annex (6.20160127) UNRELEASED; urgency=medium
 
   * annex.addsmallfiles: New option controlling what is done when
     adding files not matching annex.largefiles.
+  * Fix reversion in lookupkey, contentlocation, and examinekey which
+    caused them to sometimes output side messages.
 
  -- Joey Hess <id@joeyh.name>  Thu, 28 Jan 2016 13:53:09 -0400
 
